target_rewards -> subsidy and computation_reward -> computation_charge
