# crates/iota-graphql-rpc/src/types/system_state_summary.rs
@@ -38,7 +38,7 @@ impl SystemStateSummary {
         Some(SafeMode {
             enabled: Some(self.native.safe_mode),
             gas_summary: Some(GasCostSummary {
-                computation_cost: self.native.safe_mode_computation_rewards,
+                computation_cost: self.native.safe_mode_computation_charges,
                 storage_cost: self.native.safe_mode_storage_charges,
                 storage_rebate: self.native.safe_mode_storage_rebates,
                 non_refundable_storage_fee: self.native.safe_mode_non_refundable_storage_fee,
