# crates/iota-rest-api/openapi/openapi.json
@@ -3969,7 +3969,7 @@
           "protocol_version",
           "reference_gas_price",
           "safe_mode",
-          "safe_mode_computation_rewards",
+          "safe_mode_computation_charges",
           "safe_mode_non_refundable_storage_fee",
           "safe_mode_storage_charges",
           "safe_mode_storage_rebates",
@@ -4100,7 +4100,7 @@
             "description": "Whether the system is running in a downgraded safe mode due to a non-recoverable bug. This is set whenever we failed to execute advance_epoch, and ended up executing advance_epoch_safe_mode. It can be reset once we are able to successfully execute advance_epoch.",
             "type": "boolean"
           },
-          "safe_mode_computation_rewards": {
+          "safe_mode_computation_charges": {
             "description": "Amount of computation rewards accumulated (and not yet distributed) during safe mode.",
             "type": "string",
             "format": "u64"
