# crates/iota-types/src/iota_system_state/iota_system_state_summary.rs
@@ -75,7 +75,7 @@ pub struct IotaSystemStateSummary {
     /// during safe mode.
     #[schemars(with = "BigInt<u64>")]
     #[serde_as(as = "Readable<BigInt<u64>, _>")]
-    pub safe_mode_computation_rewards: u64,
+    pub safe_mode_computation_charges: u64,
     /// Amount of storage rebates accumulated (and not yet burned) during safe
     /// mode.
     #[schemars(with = "BigInt<u64>")]
@@ -326,7 +326,7 @@ impl Default for IotaSystemStateSummary {
             reference_gas_price: 1,
             safe_mode: false,
             safe_mode_storage_charges: 0,
-            safe_mode_computation_rewards: 0,
+            safe_mode_computation_charges: 0,
             safe_mode_storage_rebates: 0,
             safe_mode_non_refundable_storage_fee: 0,
             epoch_start_timestamp_ms: 0,
